fix: z-index of nav-sidebar ffrom 12 to 14

--- a/src/pages/catalog/catalog.scss
+++ b/src/pages/catalog/catalog.scss
@@ -23,7 +23,7 @@
 }
 
 .nav-sidebar {
-	z-index: 12;
+	z-index: 14;
 
 	display: flex;
 	flex-direction: column;
